# km2_svd

./: Makefile  README.md  pyproject.toml  test.py
.devcontainer/: Dockerfile  devcontainer.json
data/: 210315C.ITC
km2_svd/: peak_noise_control.py  slide_window.py  svd_calculator.py
km2_svd/plotter/: axis_settings.py  common_plotter.py  itc_plotter.py  plotter.py  titration_plotter.py
km2_svd/reader/: common_reader.py  itc_reader.py
