[tool.poetry]
name = "km2_svd"
version = "0.1.0"
description = ""
authors = ["YumaKatsuno <yuy011231@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
pandas = "*"
scipy = "*"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
ruff = "^0.0.241"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
